Remove try (#6)
Cleaning up and removing unnecessary try